Upgraded UI for login page + fixed the gap between navbar and content , content and footer

--- a/static/main/styles.css
+++ b/static/main/styles.css
@@ -1,3 +1,5 @@
+/* Ensure no gap between navbar and content */
+
 html, body {
     height: 100%;
     margin: 0;
@@ -16,12 +18,13 @@ body, h1, h2, h3, h4, h5, h6, p, span {
 .wrapper {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: auto;
     width: 100%; /* Ensure the wrapper spans the full width */
 }
 
 .content {
     flex: 1;
+
 }
 
 .container {
